test/expected/ns_c_ns_c.out
namespace N::C { class D; }
          ^
11: error: "N::C" was previously declared as "class" ("namespace N { class C; }")
